<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Habitus</string>

    <!-- Label for overflow menu option that inserts fake habit data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all habit data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Habits</string>

    <!-- Title for the activity to add a new habit [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_habit">+Habit</string>

    <!-- Label for editor menu option to save habit and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current habit [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for rank information in the editor [CHAR LIMIT=30] -->
    <string name="category_rank">Rank</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_name">e.g. Reading, Playing</string>

    <!-- Text hint for type field in the editor [CHAR LIMIT=30] -->
    <string name="hint_type">Type (e.g. Food, Games etc)</string>

    <!-- Text hint for measurement field in the editor [CHAR LIMIT=30] -->
    <string name="hint_measurement">Hours, pages, kg etc.</string>

    <!-- Units for everything, I guess [CHAR LIMIT=5] -->
    <string name="unit_measurement">Units</string>

    <!-- Label for dropdown menu option if the habit rank is unknown [CHAR LIMIT=20] -->
    <string name="rank_unknown">Not sure</string>

    <!-- Label for dropdown menu option if the habit rank is good[CHAR LIMIT=20] -->
    <string name="rank_good">Good</string>

    <!-- Label for dropdown menu option if the habit rank is bad[CHAR LIMIT=20] -->
    <string name="rank_bad">Bad</string>
</resources>
